2006-08-14  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/being.cpp, src/being.h, src/gui/char_select.cpp,
	src/gui/char_select.h, src/gui/playerbox.cpp, src/gui/playerbox.h,
	src/gui/status.cpp, src/gui/status.h, src/localplayer.cpp,
	src/localplayer.h, src/main.cpp, src/net/buysellhandler.cpp,
	src/net/charserverhandler.cpp, src/net/loginhandler.cpp,
	src/net/loginhandler.h, src/net/messageout.cpp, src/net/messageout.h,
	src/net/network.cpp, src/net/network.h, src/net/playerhandler.cpp,
	src/net/protocol.h: Completed porting of character creation/deletion,
	fixed some issues with network code.	

2006-08-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/player.cpp: Verify the gender to prevent crashing when something
	is wrong with the communication.

2006-08-13  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/openglgraphics.cpp, src/gui/browserbox.h, src/gui/gui.cpp,
	src/gui/chat.cpp, src/resources/image.h: Added include main.h in order
	to have USE_OPENGL defined correctly, since it is no longer passed as
	a compiler parameter.

2006-08-12  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_9-1.tmx.gz, data/maps/new_14-1.tmx.gz,
	data/maps/new_15-1.tmx.gz, data/maps/new_16-1.tmx.gz: Fixed some
	inaccessible areas.

2006-08-07  Philipp Sehmisch  <tmw@crushnet.org>
	* data/maps/new_9-1.tmx.gz, data/maps/new_14-1.tmx.gz,
	data/maps/new_15-1.tmx.gz, data/maps/new_16-1.tmx.gz,
	data/graphics/images/minimap_new_9-1.png,
	data/graphics/images/minimap_new_14-1.png,
	data/graphics/images/minimap_new_15-1.png,
	data/graphics/images/minimap_new_16-1.png: Added minimaps for woodland
	maps.

2006-08-07  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_1-1.tmx.gz, data/maps/new_14-1.tmx.gz,
	data/maps/new_15-1.tmx.gz, data/maps/new_16-1.tmx.gz: Added a new
	woodland map and a connection map between desert and woodland.
	* data/graphics/woodland_ground.png: Added some new rocks.

2006-08-07  Björn Steinbrink  <B.Steinbrink@gmx.de>
