@@ -1,3 +1,10 @@
+2006-08-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+
+	* src/net/charserverhandler.h, src/net/charserverhandler.cpp: Fix
+	warning about jump to case label crossing an initialization.
+	* src/gui/vbox.cpp: Use std::list#empty since it is more efficient as
+	pointed out by doener.
+
 2006-08-14  Eugenio Favalli  <elvenprogrammer@gmail.com>
 
 	* src/being.cpp, src/being.h, src/gui/char_select.cpp,
@@ -8,7 +15,7 @@
 	src/net/loginhandler.h, src/net/messageout.cpp, src/net/messageout.h,
 	src/net/network.cpp, src/net/network.h, src/net/playerhandler.cpp,
 	src/net/protocol.h: Completed porting of character creation/deletion,
-	fixed some issues with network code.	
+	fixed some issues with network code.
 
 2006-08-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
